# StairPersonDetector

./: .gitignore  LICENSE  README.md  mpuPlot.py
STL/: picoW_mpu6050.stl
mpu6050_mqtt/: CMakeLists.txt  lwipopts.h  mpu6050.h  mpu6050_i2c.c  mpu6050_i2c.h  mpu6050_mqtt.c  mpu6050_ntp.c  mpu6050_ntp.h  settings.c  settings.h
mpu6050_udp/: CMakeLists.txt  mpu6050.h  mpu6050_udp.c
pico_escalier/: CMakeLists.txt  README.md  pico_escalier.c  tof.c
test_mqtt/: CMakeLists.txt  lwipopts.h  test_mqtt.c
